--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   },
   "scripts": {
     "build": "ember build",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint . --ext js,ts",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
     "prepublishOnly": "ember ts:precompile",
     "postpublish": "ember ts:clean",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "ember test",
-    "test:all": "ember try:each",
+    "test": "npm-run-all lint test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each",
     "test:prod": "ember test --environment=production",
     "prepare": "husky install"
   },
@@ -42,7 +47,7 @@
     "@ember/test-waiters": "^3.0.0",
     "@types/ember": "^3.1.0",
     "@types/rsvp": "^4.0.2",
-    "ember-cli-babel": "^7.23.0",
+    "ember-cli-babel": "^7.26.6",
     "ember-cli-typescript": "^3.1.4",
     "ember-compatibility-helpers": "^1.1.2",
     "ember-destroyable-polyfill": "^2.0.2"
@@ -50,9 +55,10 @@
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.5.0",
-    "@glimmer/component": "^1.0.0",
+    "@embroider/test-setup": "^0.42.3",
+    "@glimmer/component": "^1.0.4",
     "@glimmer/env": "^0.1.7",
-    "@glimmer/tracking": "^1.0.0",
+    "@glimmer/tracking": "^1.0.4",
     "@types/ember-test-helpers": "^1.0.3",
     "@types/ember-testing-helpers": "^0.0.4",
     "@types/ember__test-helpers": "^2.0.0",
@@ -72,8 +78,8 @@
     "ember-cli-fastboot": "^3.2.0-beta.4",
     "ember-cli-fastboot-testing": "^0.5.0",
     "ember-cli-favicon": "^2.0.0",
-    "ember-cli-htmlbars": "^5.0.0",
-    "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-cli-version-checker": "^5.0.1",
@@ -81,24 +87,25 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
-    "ember-load-initializers": "^2.1.1",
+    "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator-for-testing": "^1.0.0",
     "ember-qunit": "^5.1.5",
-    "ember-resolver": "^8.0.0",
+    "ember-resolver": "^8.0.2",
     "ember-router-scroll": "^4.0.0",
     "ember-source": "^3.28.1",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^3.0.1",
+    "ember-template-lint": "^3.6.0",
     "ember-try": "^1.4.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-plugin-ember": "^9.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ember": "^10.5.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "husky": "^6.0.0",
     "lint-staged": "^10.0.0",
     "loader.js": "^4.7.0",
-    "prettier": "^2.0.5",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.2",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
     "release-it": "^14.2.1",
