--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -30,8 +30,10 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Lint
         run: yarn lint
+        working-directory: test-app
       - name: Run Tests
         run: yarn test:ember
+        working-directory: test-app
 
   floating:
     name: "Floating Dependencies"
@@ -47,6 +49,7 @@ jobs:
         run: yarn install --no-lockfile
       - name: Run Tests
         run: yarn test:ember
+        working-directory: test-app
 
   try-scenarios:
     name: ${{ matrix.try-scenario }}
@@ -79,3 +82,4 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Run Tests
         run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }}
+        working-directory: test-app
